# YahirReusableBot

./: .gitignore  CLAUDE.md  ECOSYSTEM.md  EXTENSION-GUIDE.md  NEW-CONSUMER.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  config.json
scripts/: new_consumer.py
tests/: test_gateway.py  test_import_hygiene.py
yahir_reusable_bot/: __init__.py
yahir_reusable_bot/channels/: __init__.py  base.py
yahir_reusable_bot/config/: __init__.py  holder.py  reload.py
yahir_reusable_bot/discord/: __init__.py  gateway.py  panelkit.py  selection.py
yahir_reusable_bot/lifecycle/: __init__.py  health.py  identity.py  ready_gate.py  sdnotify.py
yahir_reusable_bot/ports/: __init__.py  alerts.py  jobstore.py  occurrence.py
yahir_reusable_bot/registry/: __init__.py  dispatch.py  match.py  registry.py  spec.py
yahir_reusable_bot/reliability/: __init__.py  retry.py
yahir_reusable_bot/scheduler/: __init__.py  engine.py
